src/main/deploy/vbox/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vbox-region-svc
spec:
  selector:
    app: vbox-region-app
  ports:
    - name: http
      port: 8080
      targetPort: 80
